# PEP 518: https://www.python.org/dev/peps/pep-0518/

[tool.poetry]
name = "chargeamps"
version = "1.6.0"
readme = "README.md"
description = "Charge-Amps API bindings for Python"
authors = ["Jakob Schlyter <jakob@kirei.se>"]
license = "BSD-2-Clause"
repository = "https://github.com/kirei/python-chargeamps"
packages = [
    { include = "chargeamps" }
]
keywords = [
    "ev"
]
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[tool.poetry.scripts]
chargeamps = "chargeamps.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.5"
dataclasses-json = "^0.5.2"
marshmallow = "^3.14.1"
PyJWT = "^2.1.0"
isoduration = "^20.11.0"
ciso8601 = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pylama = "^8.4.1"
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-black = "^0.3.12"
pytest-isort = "^3.0.0"
setuptools = "^69.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylama.linter.pycodestyle]
max_line_length = 120

[tool.pylama.linter.mccabe]
complexity = 40

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true
