# PEP 518: https://www.python.org/dev/peps/pep-0518/

[tool.poetry]
name = "chargeamps"
version = "1.8.1"
readme = "README.md"
description = "Charge-Amps API bindings for Python"
authors = ["Jakob Schlyter <jakob@kirei.se>"]
license = "BSD-2-Clause"
repository = "https://github.com/kirei/python-chargeamps"
packages = [
    { include = "chargeamps" }
]
keywords = [
    "ev"
]
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[tool.poetry.scripts]
chargeamps = "chargeamps.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.5"
PyJWT = "^2.1.0"
isoduration = "^20.11.0"
ciso8601 = "^2.2.0"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"
pytest-ruff = "^0.3.2"
ruff = "^0.4.8"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylama.linter.pycodestyle]
max_line_length = 120

[tool.pylama.linter.mccabe]
complexity = 40

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001", "SIM102"]
exclude = ["examples/*"]

[tool.ruff.lint.isort]
known-first-party = [
    "chargeamps",
]
combine-as-imports = true
split-on-trailing-comma = false
