# PEP 518: https://www.python.org/dev/peps/pep-0518/

[project]
name = "chargeamps"
dynamic = ["version"]
readme = "README.md"
description = "Charge-Amps API bindings for Python"
authors = [
    {name="Jakob Schlyter", email = "jakob@kirei.se"}
]
license = "BSD-2-Clause"
keywords = [
    "ev"
]
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiohttp>=3.12.15",
    "ciso8601>=2.3.3",
    "isoduration>=20.11.0",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
]

[project.scripts]
chargeamps = "chargeamps.cli:main"

[project.urls]
repository = "https://github.com/kirei/python-chargeamps.git"
issues = "https://github.com/kirei/python-chargeamps/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-ruff>=0.5",
    "ruff>=0.12.12",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001", "SIM102"]
exclude = ["examples/*"]

[tool.ruff.lint.isort]
known-first-party = [
    "chargeamps",
]
combine-as-imports = true
split-on-trailing-comma = false
